--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@web3auth/modal": "^6.1.8",
     "@web3auth/openlogin-adapter": "^6.1.7",
     "@web3auth/solana-provider": "^6.1.8",
+    "html5-qrcode": "^2.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
