--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@web3auth/openlogin-adapter": "^6.1.7",
     "@web3auth/solana-provider": "^6.1.8",
     "html5-qrcode": "^2.3.8",
+    "playwright": "^1.37.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
