--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@web3auth/openlogin-adapter": "^6.1.7",
     "@web3auth/solana-provider": "^6.1.8",
     "html5-qrcode": "^2.3.8",
-    "playwright": "^1.37.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
@@ -43,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.37.1",
     "assert": "^2.0.0",
     "autoprefixer": "^10.4.15",
     "buffer": "^6.0.3",
@@ -50,6 +50,7 @@
     "eslint-config-react-app": "^7.0.1",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
+    "playwright": "^1.37.1",
     "postcss": "^8.4.28",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
