--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@web3auth/modal": "^6.1.8",
     "@web3auth/openlogin-adapter": "^6.1.7",
     "@web3auth/solana-provider": "^6.1.8",
+    "firebase": "^10.3.1",
     "html5-qrcode": "^2.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
